@@ -19,6 +19,7 @@ package org.apache.nifi.processors.standard;
 import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.util.MockComponentLog;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.BeforeEach;
@@ -72,7 +73,7 @@ public class CountTextTest {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(CountText.REL_SUCCESS, 1);
-        MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).getFirst();
         for (final Map.Entry<String, String> entry: expectedValues.entrySet()) {
             final String attribute = entry.getKey();
             final String expectedValue = entry.getValue();
@@ -116,7 +117,7 @@ public class CountTextTest {
             runner.run();
 
             runner.assertAllFlowFilesTransferred(CountText.REL_SUCCESS, 1);
-            MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).get(0);
+            MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).getFirst();
             for (final Map.Entry<String, String> entry: expectedValues.entrySet()) {
                 final String attribute = entry.getKey();
                 final String expectedValue = entry.getValue();
@@ -148,7 +149,7 @@ public class CountTextTest {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(CountText.REL_SUCCESS, 1);
-        MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(CountText.TEXT_WORD_COUNT, EXPECTED_WORD_COUNT);
     }
 
@@ -176,7 +177,7 @@ public class CountTextTest {
             runner.run();
 
             runner.assertAllFlowFilesTransferred(CountText.REL_SUCCESS, 1);
-            MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).get(0);
+            MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).getFirst();
             for (final Map.Entry<String, String> entry: expectedValues.entrySet()) {
                 final String attribute = entry.getKey();
                 final String expectedValue = entry.getValue();
@@ -187,7 +188,7 @@ public class CountTextTest {
     }
 
     @Test
-    void testShouldTrackSessionCountersAcrossMultipleFlowfiles() throws IOException, NoSuchFieldException, IllegalAccessException {
+    void testShouldTrackSessionCountersAcrossMultipleFlowfiles() throws IOException {
         final Path inputPath = Paths.get("src/test/resources/TestCountText/jabberwocky.txt");
 
         final Map<String, String> expectedValues = new HashMap<>();
@@ -210,7 +211,7 @@ public class CountTextTest {
             runner.run();
 
             runner.assertAllFlowFilesTransferred(CountText.REL_SUCCESS, 1);
-            MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).get(0);
+            MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).getFirst();
             for (final Map.Entry<String, String> entry: expectedValues.entrySet()) {
                 final String attribute = entry.getKey();
                 final String expectedValue = entry.getValue();
@@ -219,10 +220,10 @@ public class CountTextTest {
             }
         }
 
-        assertEquals(Long.valueOf(expectedValues.get(TLC)) * n, runner.getCounterValue("Lines Counted"));
-        assertEquals(Long.valueOf(expectedValues.get(TLNEC)) * n, runner.getCounterValue("Lines (non-empty) Counted"));
-        assertEquals(Long.valueOf(expectedValues.get(TWC)) * n, runner.getCounterValue("Words Counted"));
-        assertEquals(Long.valueOf(expectedValues.get(TCC)) * n, runner.getCounterValue("Characters Counted"));
+        assertEquals(Long.parseLong(expectedValues.get(TLC)) * n, runner.getCounterValue("Lines Counted"));
+        assertEquals(Long.parseLong(expectedValues.get(TLNEC)) * n, runner.getCounterValue("Lines (non-empty) Counted"));
+        assertEquals(Long.parseLong(expectedValues.get(TWC)) * n, runner.getCounterValue("Words Counted"));
+        assertEquals(Long.parseLong(expectedValues.get(TCC)) * n, runner.getCounterValue("Characters Counted"));
     }
 
     @Test
@@ -272,7 +273,7 @@ public class CountTextTest {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(CountText.REL_SUCCESS, 1);
-        MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals(CountText.TEXT_WORD_COUNT, EXPECTED_WORD_COUNT);
     }
 
@@ -299,9 +300,24 @@ public class CountTextTest {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(CountText.REL_SUCCESS, 1);
-        MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).get(0);
+        MockFlowFile flowFile = runner.getFlowFilesForRelationship(CountText.REL_SUCCESS).getFirst();
 
         flowFile.assertAttributeEquals(CountText.TEXT_WORD_COUNT, EXPECTED_WORD_COUNT);
     }
 
+    @Test
+    void testMigrateProperties() {
+        final Map<String, String> expectedRenamed = Map.ofEntries(
+                Map.entry("text-line-count", CountText.TEXT_LINE_COUNT_PD.getName()),
+                Map.entry("text-line-nonempty-count", CountText.TEXT_LINE_NONEMPTY_COUNT_PD.getName()),
+                Map.entry("text-word-count", CountText.TEXT_WORD_COUNT_PD.getName()),
+                Map.entry("text-character-count", CountText.TEXT_CHARACTER_COUNT_PD.getName()),
+                Map.entry("split-words-on-symbols", CountText.SPLIT_WORDS_ON_SYMBOLS_PD.getName()),
+                Map.entry("character-encoding", CountText.CHARACTER_ENCODING_PD.getName()),
+                Map.entry("ajust-immediately", CountText.ADJUST_IMMEDIATELY.getName())
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
+    }
 }
