@@ -18,6 +18,7 @@
 package org.apache.nifi.processors.standard;
 
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.BeforeEach;
@@ -26,6 +27,9 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Map;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class TestExtractGrok {
 
@@ -52,7 +56,7 @@ public class TestExtractGrok {
         testRunner.enqueue("admin - 127.0.0.1");
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(ExtractGrok.REL_MATCH);
-        final MockFlowFile matched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_MATCH).get(0);
+        final MockFlowFile matched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_MATCH).getFirst();
 
         matched.assertAttributeEquals("grok.username", "admin");
     }
@@ -64,7 +68,7 @@ public class TestExtractGrok {
         testRunner.enqueue(GROK_LOG_INPUT);
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(ExtractGrok.REL_MATCH);
-        final MockFlowFile matched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_MATCH).get(0);
+        final MockFlowFile matched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_MATCH).getFirst();
 
         matched.assertAttributeEquals("grok.verb", "GET");
         matched.assertAttributeEquals("grok.response", "401");
@@ -83,7 +87,7 @@ public class TestExtractGrok {
         testRunner.enqueue("-42");
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(ExtractGrok.REL_MATCH);
-        final MockFlowFile matched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_MATCH).get(0);
+        final MockFlowFile matched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_MATCH).getFirst();
         matched.assertAttributeEquals("grok.NUMBER", "[-42, null]");
     }
 
@@ -95,7 +99,7 @@ public class TestExtractGrok {
         testRunner.enqueue("-42");
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(ExtractGrok.REL_MATCH);
-        final MockFlowFile matched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_MATCH).get(0);
+        final MockFlowFile matched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_MATCH).getFirst();
         matched.assertAttributeEquals("grok.NUMBER", "-42");
     }
 
@@ -107,7 +111,7 @@ public class TestExtractGrok {
         testRunner.enqueue(GROK_TEXT_INPUT);
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(ExtractGrok.REL_NO_MATCH);
-        final MockFlowFile notMatched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_NO_MATCH).get(0);
+        final MockFlowFile notMatched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_NO_MATCH).getFirst();
         notMatched.assertContentEquals(GROK_TEXT_INPUT);
     }
 
@@ -135,7 +139,7 @@ public class TestExtractGrok {
         testRunner.enqueue(GROK_LOG_INPUT);
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(ExtractGrok.REL_MATCH);
-        final MockFlowFile matched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_MATCH).get(0);
+        final MockFlowFile matched = testRunner.getFlowFilesForRelationship(ExtractGrok.REL_MATCH).getFirst();
 
         matched.assertAttributeEquals("grok.verb", "GET");
         matched.assertAttributeEquals("grok.response", "401");
@@ -149,5 +153,16 @@ public class TestExtractGrok {
         matched.assertAttributeNotExists("grok.INT");
         matched.assertAttributeNotExists("grok.BASE10NUM");
         matched.assertAttributeNotExists("grok.COMMONAPACHELOG");
+    }
+
+    @Test
+    void testMigrateProperties() {
+        final Map<String, String> expectedRenamed = Map.of(
+                "Grok Pattern file", ExtractGrok.GROK_PATTERNS.getName(),
+                "Named captures only", ExtractGrok.NAMED_CAPTURES_ONLY.getName()
+        );
+
+        final PropertyMigrationResult propertyMigrationResult = testRunner.migrateProperties();
+        assertEquals(expectedRenamed, propertyMigrationResult.getPropertiesRenamed());
     }
 }
